--- a/front/public/index.html
+++ b/front/public/index.html
@@ -2,7 +2,11 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <!-- <link rel="icon"   href="%PUBLIC_URL%/favicon.ico"   /> -->
+
+     <!-- Usa este enlace para establecer un emoji como favicon -->
+     <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 24 24%22><text y=%2222%22 font-size=%2224%22>👨‍💻</text></svg>" />
+
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
@@ -24,7 +28,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>Rubén Corbalán</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
