cambios para que aparezca mi foto al compartir link

--- a/front/public/index.html
+++ b/front/public/index.html
@@ -13,6 +13,14 @@
       name="description"
       content="Corbalán Rubén web site"
     />
+
+     <!-- Meta tags para Open Graph -->
+     <meta property="og:title" content="Rubén Corbalán" />
+     <meta property="og:description" content="Corbalán Rubén web site" />
+     <meta property="og:image" content="%PUBLIC_URL%/paPerfilPortfolio2.png" />
+     <meta property="og:url" content="https://rubencorbalan.vercel.app/" />
+     <meta property="og:type" content="website" />
+
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
